# bondcat

./: .gitignore  CLAUDE.md  ITER_LOG.md  PRIVACY.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
_gen/: genimg.sh  rmbg.py  rmbg_smart.py
appstore-assets/: metadata.json
fastlane/: Appfile  Deliverfile
fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
fastlane/metadata/zh-Hans/: description.txt  keywords.txt  name.txt  promotional_text.txt  release_notes.txt  subtitle.txt
site/bondcat-official/: index.html
src/: game-core.js  index.html
src-tauri/: Cargo.toml  Entitlements.appstore.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.desktop.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: game-browser.test.mjs  game-core.test.mjs
tools/: notarize_desktop.sh
